add postgres config to keep data in container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,21 +7,25 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    volumes:  # mounting data to docker
+    volumes:  # mounting data to docker. Volume for sqlite
       - .:/ecommerce_platform
     ports:
       - 8000:8000
+    command: bash -c 'while !</dev/tcp/postgres/5432; do sleep 5; done; python manage.py runserver 0.0.0.0:8000'
+    depends_on:
+      - postgres
+
 
   postgres:
     image: postgres:14
     environment:
-      POSTGRES_USER: test_ecommerce
       POSTGRES_DB: test_ecommerce_db
+      POSTGRES_USER: test_ecommerce
       POSTGRES_PASSWORD: test_ecommerce
 
-    volumes:
-      - pgdata:/var/lib/postgresql/data
     ports:
       - 5432:5432
 
-
+    volumes:  # Use script to initialize db, mount pgdata to keep data
+      - ./sqls/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - pgdata:/var/lib/postgresql/data
