--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
   postgres:
     image: postgres:14
     environment:
-      POSTGRES_DB: test_ecommerce_db
-      POSTGRES_USER: test_ecommerce
-      POSTGRES_PASSWORD: test_ecommerce
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
 
     ports:
       - 5432:5432
