--- a/requirements.txt
+++ b/requirements.txt
@@ -8,15 +8,16 @@ click-plugins==1.1.1
 click-repl==0.2.0
 Django==3.2.8
 django-cors-headers==3.10.0
+django-environ==0.8.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
 kombu==5.2.2
 Pillow==8.4.0
 prompt-toolkit==3.0.24
+psycopg2-binary==2.9.2
 PyJWT==2.3.0
 pytz==2021.3
 six==1.16.0
 sqlparse==0.4.2
 vine==5.0.0
 wcwidth==0.2.5
-psycopg2
