--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ volumes:
 
 services:
   python:
-#    image: python:3.9
+#    image: python:3.9-slim
     build:
       context: .
       dockerfile: Dockerfile
@@ -18,7 +18,7 @@ services:
       - celery_worker
 
   postgres:
-    image: postgres:14
+    image: postgres:14-alpine
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -33,7 +33,7 @@ services:
 
   # rabbitMQ
   rabbitmq:
-    image: rabbitmq:3.9
+    image: rabbitmq:3.9-alpine
 
   # celery worker service - runs worker in django app
   celery_worker:
